k8S/namespace-giftit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: giftit
