k8S/statefulset-postgre-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: giftit-postgre
  labels:
    app: giftit
    environment: minikube
    tier: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giftit-db
      environment: minikube
      tier: db
  serviceName: postgre-db-service # It should be Headless Service (statefullset)
  podManagementPolicy: Parallel # in order to make addition and temination of POD in resplicaset Parallel not ordered approch
  template:
    metadata:
      labels:
        app: giftit-db
        environment: minikube
        tier: db
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: postgres-db
        image: postgres
        resources:
          limits:
              cpu: 0.2
              memory: 128Mi
        ports:
          - containerPort: 5432
        imagePullPolicy: IfNotPresent
        # livenessProbe:
        #   httpGet:
        #     path: /vendors
        #     port: 31000
        #   exec:
        #     command:
        #     - cat
        #   tcpSocket:
        #     port: 5432
        #   initialDelaySeconds: 60
        #   periodSeconds: 5
        volumeMounts:
          - mountPath: "/var/lib/postgresql/data"
            name: postgre-volume
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-hub      
      #priorityClassName: high-priority #Pod Priority indicates the importance of a Pod relative to other Pods
      volumes:
        - name: postgre-volume
          persistentVolumeClaim:
            claimName: giftit-pvc
        # env:
        # - name: MY_NAMESPACE
        #   valueFrom:
        #     fieldRef:
        #       fieldPath: metadata.namespace
        # - name: spring_profiles_active
  # volumeClaimTemplates:
  #     - metadata:
  #         name: giftit-pvc
  #       spec:
  #         accessModes: [ "ReadWriteOnce" ]
  #         storageClassName: "local-storage"
  #         resources:
  #           requests:
  #             storage: 10Gi    


# kubectl --kubeconfig ~/.kube/config get secrets -n gke_noted-throne-303816_northamerica-northeast1-a_giftit ssh-keys \
# -o jsonpath='{.data.ssh\.key}' | base64 -d > \
# ~/.ssh/gke_noted-throne-303816_northamerica-northeast1-a_giftit.key && chmod 600 ~/.ssh/gke_noted-throne-303816_northamerica-northeast1-a_giftit.key
