k8S/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: giftit-backend
    environment: minikube 
    tier: backend   
spec:
  selector:
    app: giftit-backend
    environment: minikube
    tier: backend
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 8080
    protocol: TCP
