k8S/service-postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-db-service
  labels:
    app: giftit-db
    environment: minikube
spec:
  selector:
    app: giftit-db
    environment: minikube
    tier: db
  ports:
    - port: 5432 #if mentioned inly port in that case target port will be taken same
  clusterIP: None
  # type: NodePort
  # ports:
  # - name: db
  #   nodePort: 31001
  #   port: 81
  #   targetPort: 5432
