k8S/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-giftit
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway #this is required class for azure 
    #kubernetes.io/ingress.class: nginx
    #kubernetes.io/cluster-service: true
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: backend-service
          servicePort: 80
